@@ -1,3 +1,7 @@
+20070921
+ - (djm) [atomicio.c] Fix spin avoidance for platforms that define
+   EWOULDBLOCK; patch from ben AT psc.edu
+
 20070917
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2007/08/23 02:49:43
@@ -3258,4 +3262,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4757 2007/09/17 15:32:32 tim Exp $
+$Id: ChangeLog,v 1.4758 2007/09/21 03:12:49 djm Exp $
